# ring_fit

./: .gitignore  README.md  pyproject.toml  ring_fit.sublime-project  uv.md
data/2019-08-21/: set1.csv
data/stope 1/: stope_1_EXTENSION-HOLES-SETUP2.csv  stope_1_EXTENSION-HOLES-SLIPE.csv  stope_1_EXTENSION-HOLES.csv  stope_1_EXTENSION-RINGS-SETUP2.csv  stope_1_EXTENSION-RINGS-SLIPE.csv  stope_1_EXTENSION-RINGS.csv  stope_1_EXTENSION.dxf  stope_1_EXTENSION_SLIPE.dxf  stope_1_Rn1-Rn4.dxf  stope_1_S1-R7.dxf  stope_1_r8-r17.dxf
data/stope 2/: stope_2-HOLES.csv  stope_2_blast1-03-08-19.csv  stope_2_blast1.dxf
data/stope 3/: stope_3 slot2 rings.dxf  stope_3 slot3 rings.dxf  stope_3-03-08-2019.csv  stope_3-RINGS HOLES.csv  stope_3-SLOT HOLES.csv  stope_3-SLOT-03-08-2019.csv  stope_3r3-r7 rings.dxf  stope_3r8-r11 rings.dxf
data/stope 4/: stope 4 SLOT.dxf  stope 4 blast 2 _R1a-R10.dxf  stope 4 blast 2 _R1a-R3.dxf  stope_4 SLOT-03-08-2019.csv  stope_4 SLOT-HOLES-03-08-2019.csv  stope_4- HOLES-RINGS-03-08-2019.csv  stope_4- RINGS-03-08-2019.csv
notebooks/: 01 - math - best fit plane.ipynb  02 - simple fit.ipynb  Best Fit Plane.ipynb  best_fit_plane.py  dxf processing.ipynb
src/ring_fit/: command_sample.py  geometry.py  math.py  ring_fit.py
tests/: test_geometry.py  test_point.py  test_vector.py
