# ----
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# 2024

[project]
name = "ring_fit"
version = "0.0.1"
description = "Fit ring plane to holes"
authors = [
    { name = "Troy Williams", email = "troy.williams@bluebill.net" }
]


# ----
# Specify the License and the particular classifiers

license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.12"
dependencies = [
    "platformdirs",
    "click",
    "numpy",
    "openpyxl",
    "pandas",
    "pint",
    "rich",
    "scipy",
    "matplotlib",
    "pyvista[jupyter]>=0.44.2",
    "pydantic>=2.10.2",
    "ezdxf>=1.3.4",
]


# Can use: `uv add git+ssh://git@server.bluebill.net/troy/projects/tools/bluebill/utilities`
# [tool.uv.sources]
# utilities = { git = "ssh://git@server.bluebill.net/troy/projects/tools/bluebill/utilities" }
# geometry = { git = "ssh://git@server.bluebill.net/troy/projects/tools/bluebill/geometry"}
# visual = { git = "ssh://git@server.bluebill.net/troy/projects/tools/bluebill/visual"}
# material_properties = { git = "ssh://git@server.bluebill.net/troy/projects/tools/bluebill/material_properties"}


[project.urls]
Homepage = "https://www.bluebill.net"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.metadata]
# allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "jupyter", # jupyter metapackage: https://pypi.org/project/jupyter/
    # "ipympl",
    # "notebook",    # Jupyter Notebook - https://pypi.org/project/notebook/.
    # "ipywidgets",
    # "nbconvert",
    # "jupyter-console",
]

[project.scripts]
rfit="ring_fit.rfit:main"
